<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stepwise</string>

    <string name="title_student">Студент</string>
    <string name="title_teacher">Преподаватель</string>

    <string name="login_welcome">Добро пожаловать — войдите в систему</string>
    <string name="hint_username">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="button_login">Войти</string>

    <string name="error_network">Ошибка сети. Повторите попытку позже.</string>
    <string name="logout">Выйти</string>
    <string name="forgot_password">Забыли пароль?</string>

    <string name="spinner_type_hint">Тип работы</string>
    <string name="spinner_type_coursework_desc">Курсовая работа</string>
    <string name="spinner_type_thesis_desc">Дипломная работа</string>
    <string name="spinner_icon_desc">Icon</string>

    <string name="no_groups_found">Группы не найдены</string>
    <string name="enter_search_query">Введите запрос для поиска</string>
    <string name="error_loading_groups">Ошибка при загрузке групп</string>
    <string name="select_group">Выберите группу</string>
    <string name="not_set">Не задан</string>
</resources>